fix: whitespace css

--- a/source/style.css
+++ b/source/style.css
@@ -1,159 +1,3 @@
 * {
    box-sizing: border-box;
 }
-
-.body-style {
-   min-height: 100vh;
-   font-family: 'Centurygothic';
-   font-size: 18px;
-   /* font-weight: 300; */
-   background-color: rgb(255, 253, 240);
-   background-size: 100%;
-}
-
-section p {
-   padding-left: 20px;
-}
-
-.main {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-}
-
-section {
-   width: 70%;
-
-}
-
-h2 {
-   background-color: rgb(191, 233, 171);
-   min-height: 50px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   margin-top: 63px;
-}
-
-.footer {
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   background-color: grey;
-   min-height: 50px;
-   padding: 10px 30px;
-}
-
-/* .footer-text {
-   display: flex;
-   /* justify-content: space-around; */
-
-
-
-.fade {
-   opacity: 1;
-   text-decoration: none;
-   color: black;
-}
-
-.fade:hover, .nav-li:hover {
-   opacity: 0.6;
-   -webkit-transform: scale(1.2);
-   -ms-transform: scale(1.2);
-   transform: scale(1.2);
-}
-
-.nav {
-   display: flex;
-   justify-content: center;
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-}
-
-.navigation {
-   width: 100%;
-   min-height: 4rem;
-   /* min-width: 50%;
-   min-height: 50px; */
-   display: flex;
-   flex-direction: row;
-   flex-wrap: wrap;
-   align-items: center;
-   justify-content: space-around;
-   background-color: rgb(191, 233, 171);
-   font-size: 25px;
-   margin: 0;
-   padding: 0;
-}
-
-
-
-section a {
-   font-size: 1.5em;
-}
-
-nav a,
-.projcet_link,
-a.text,
-a.text:active,
-a.text:hover {
-   color: black;
-   text-decoration: none;
-}
-
-.nav-li {
-   list-style-type: none;
-}
-
-.container {
-   max-width: 1440px;
-   margin: 0 auto;
-}
-
-
-
-.avatar {
-
-   display: flex;
-   align-items: center;
-   justify-content: space-around;
-   margin: 8% 0 0 0;
-   padding: 0 50px;
-   /* text-align: center; */
-}
-
-.h1_text {
-   display: flex;
-   align-items: center;
-}
-
-.cv-avatar {
-   height: 200px;
-   width: 200px;
-   border-radius: 50%;
-}
-
-.skills-text {
-   font-size: 1.5em;
-   margin: 0;
-}
-
-@font-face {
-   font-family: 'Centurygothic';
-   src: url("./fonts/centurygothic.ttf");
-}
-
-@media (max-width: 600px) {
-   .nav {
-      position: relative;
-   }
-
-   .navigation {
-      flex-direction: column;
-   }
-   /* .container {
-   margin-top: 200px;
-  } */
-}
